bison.output
Grammar

    0 $accept: xml $end

    1 xml: linear_layout
    2    | relative_layout

    3 child_plus: child
    4           | child_plus child

    5 child: text_view
    6      | image_view
    7      | button
    8      | radio_group
    9      | progress_bar
   10      | linear_layout
   11      | relative_layout
   12      | STRING

   13 radio_button_plus: radio_button
   14                  | radio_button_plus radio_button

   15 str_or_int: STRING
   16           | INT

   17 $@1: ε

   18 $@2: ε

   19 linear_layout: LESS_THAN LINEAR_LAYOUT $@1 linear_attributes GREATER_THAN $@2 child_plus LESS_THAN SLASH LINEAR_LAYOUT GREATER_THAN

   20 linear_attributes: linear_attribute
   21                  | linear_attribute linear_attributes

   22 $@3: ε

   23 linear_attribute: ANDROID COLON $@3 linear_attribute_name

   24 $@4: ε

   25 $@5: ε

   26 linear_attribute_name: LAYOUT_WIDTH $@4 ASSIGN $@5 str_or_int

   27 $@6: ε

   28 $@7: ε

   29 linear_attribute_name: LAYOUT_HEIGHT $@6 ASSIGN $@7 str_or_int
   30                      | ORIENTATION ASSIGN STRING
   31                      | ID ASSIGN STRING

   32 $@8: ε

   33 $@9: ε

   34 relative_layout: LESS_THAN RELATIVE_LAYOUT $@8 relative_attributes GREATER_THAN $@9 child_plus LESS_THAN SLASH RELATIVE_LAYOUT GREATER_THAN

   35 relative_attributes: relative_attribute
   36                    | relative_attribute relative_attributes

   37 $@10: ε

   38 relative_attribute: ANDROID COLON $@10 relative_attribute_name

   39 $@11: ε

   40 $@12: ε

   41 relative_attribute_name: LAYOUT_WIDTH $@11 ASSIGN $@12 str_or_int

   42 $@13: ε

   43 $@14: ε

   44 relative_attribute_name: LAYOUT_HEIGHT $@13 ASSIGN $@14 str_or_int
   45                        | ID ASSIGN STRING

   46 $@15: ε

   47 text_view: LESS_THAN TEXT_VIEW $@15 text_attributes SLASH GREATER_THAN

   48 text_attributes: text_attribute
   49                | text_attribute text_attributes

   50 $@16: ε

   51 text_attribute: ANDROID COLON $@16 text_attribute_name

   52 $@17: ε

   53 $@18: ε

   54 text_attribute_name: LAYOUT_WIDTH $@17 ASSIGN $@18 str_or_int

   55 $@19: ε

   56 $@20: ε

   57 text_attribute_name: LAYOUT_HEIGHT $@19 ASSIGN $@20 str_or_int

   58 $@21: ε

   59 text_attribute_name: TEXT $@21 ASSIGN STRING
   60                    | ID ASSIGN STRING
   61                    | TEXT_COLOR ASSIGN STRING

   62 $@22: ε

   63 image_view: LESS_THAN IMAGE_VIEW $@22 image_view_attributes SLASH GREATER_THAN

   64 image_view_attributes: image_view_attribute
   65                      | image_view_attribute image_view_attributes

   66 $@23: ε

   67 image_view_attribute: ANDROID COLON $@23 image_view_attribute_name

   68 $@24: ε

   69 $@25: ε

   70 image_view_attribute_name: LAYOUT_WIDTH $@24 ASSIGN $@25 str_or_int

   71 $@26: ε

   72 $@27: ε

   73 image_view_attribute_name: LAYOUT_HEIGHT $@26 ASSIGN $@27 str_or_int

   74 $@28: ε

   75 image_view_attribute_name: SRC $@28 ASSIGN STRING
   76                          | ID ASSIGN STRING
   77                          | PADDING ASSIGN INT

   78 $@29: ε

   79 button: LESS_THAN BUTTON $@29 button_attributes SLASH GREATER_THAN

   80 button_attributes: button_attribute
   81                  | button_attribute button_attributes

   82 $@30: ε

   83 button_attribute: ANDROID COLON $@30 button_attribute_name

   84 $@31: ε

   85 $@32: ε

   86 button_attribute_name: LAYOUT_WIDTH $@31 ASSIGN $@32 str_or_int

   87 $@33: ε

   88 $@34: ε

   89 button_attribute_name: LAYOUT_HEIGHT $@33 ASSIGN $@34 str_or_int

   90 $@35: ε

   91 button_attribute_name: TEXT $@35 ASSIGN STRING
   92                      | ID ASSIGN STRING
   93                      | PADDING ASSIGN INT

   94 $@36: ε

   95 $@37: ε

   96 radio_group: LESS_THAN RADIO_GROUP $@36 radio_group_attributes GREATER_THAN $@37 radio_button_plus LESS_THAN SLASH RADIO_GROUP GREATER_THAN

   97 radio_group_attributes: radio_group_attribute
   98                       | radio_group_attribute radio_group_attributes

   99 $@38: ε

  100 radio_group_attribute: ANDROID COLON $@38 radio_group_attribute_name

  101 $@39: ε

  102 $@40: ε

  103 radio_group_attribute_name: LAYOUT_WIDTH $@39 ASSIGN $@40 str_or_int

  104 $@41: ε

  105 $@42: ε

  106 radio_group_attribute_name: LAYOUT_HEIGHT $@41 ASSIGN $@42 str_or_int
  107                           | ID ASSIGN STRING
  108                           | CHECKED_BUTTON ASSIGN STRING

  109 $@43: ε

  110 radio_group_attribute_name: AMOUNT $@43 ASSIGN INT

  111 $@44: ε

  112 radio_button: LESS_THAN RADIO_BUTTON $@44 radio_button_attributes SLASH GREATER_THAN

  113 radio_button_attributes: radio_button_attribute
  114                        | radio_button_attribute radio_button_attributes

  115 $@45: ε

  116 radio_button_attribute: ANDROID COLON $@45 radio_button_attribute_name

  117 $@46: ε

  118 $@47: ε

  119 radio_button_attribute_name: LAYOUT_WIDTH $@46 ASSIGN $@47 str_or_int

  120 $@48: ε

  121 $@49: ε

  122 radio_button_attribute_name: LAYOUT_HEIGHT $@48 ASSIGN $@49 str_or_int

  123 $@50: ε

  124 radio_button_attribute_name: TEXT $@50 ASSIGN STRING
  125                            | ID ASSIGN STRING

  126 $@51: ε

  127 progress_bar: LESS_THAN PROGRESS_BAR $@51 progress_bar_attributes SLASH GREATER_THAN

  128 progress_bar_attributes: progress_bar_attribute
  129                        | progress_bar_attribute progress_bar_attributes

  130 $@52: ε

  131 progress_bar_attribute: ANDROID COLON $@52 progress_bar_attribute_name

  132 $@53: ε

  133 $@54: ε

  134 progress_bar_attribute_name: LAYOUT_WIDTH $@53 ASSIGN $@54 str_or_int

  135 $@55: ε

  136 $@56: ε

  137 progress_bar_attribute_name: LAYOUT_HEIGHT $@55 ASSIGN $@56 str_or_int
  138                            | ID ASSIGN STRING
  139                            | MAX ASSIGN INT
  140                            | PROGRESS ASSIGN INT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LESS_THAN (258) 19 34 47 63 79 96 112 127
    GREATER_THAN (259) 19 34 47 63 79 96 112 127
    COLON (260) 23 38 51 67 83 100 116 131
    SLASH (261) 19 34 47 63 79 96 112 127
    ASSIGN (262) 26 29 30 31 41 44 45 54 57 59 60 61 70 73 75 76 77 86 89 91 92 93 103 106 107 108 110 119 122 124 125 134 137 138 139 140
    INT <intval> (263) 16 77 93 110 139 140
    STRING <strval> (264) 12 15 30 31 45 59 60 61 75 76 91 92 107 108 124 125 138
    LINEAR_LAYOUT (265) 19
    RELATIVE_LAYOUT (266) 34
    TEXT_VIEW (267) 47
    IMAGE_VIEW (268) 63
    BUTTON (269) 79
    RADIO_BUTTON (270) 112
    RADIO_GROUP (271) 96
    PROGRESS_BAR (272) 127
    ANDROID (273) 23 38 51 67 83 100 116 131
    LAYOUT_WIDTH (274) 26 41 54 70 86 103 119 134
    LAYOUT_HEIGHT (275) 29 44 57 73 89 106 122 137
    ORIENTATION (276) 30
    ID (277) 31 45 60 76 92 107 125 138
    TEXT (278) 59 91 124
    SRC (279) 75
    PADDING (280) 77 93
    MAX (281) 139
    PROGRESS (282) 140
    TEXT_COLOR (283) 61
    CHECKED_BUTTON (284) 108
    AMOUNT (285) 110


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    xml (32)
        on left: 1 2
        on right: 0
    child_plus (33)
        on left: 3 4
        on right: 4 19 34
    child (34)
        on left: 5 6 7 8 9 10 11 12
        on right: 3 4
    radio_button_plus (35)
        on left: 13 14
        on right: 14 96
    str_or_int (36)
        on left: 15 16
        on right: 26 29 41 44 54 57 70 73 86 89 103 106 119 122 134 137
    linear_layout (37)
        on left: 19
        on right: 1 10
    $@1 (38)
        on left: 17
        on right: 19
    $@2 (39)
        on left: 18
        on right: 19
    linear_attributes (40)
        on left: 20 21
        on right: 19 21
    linear_attribute (41)
        on left: 23
        on right: 20 21
    $@3 (42)
        on left: 22
        on right: 23
    linear_attribute_name (43)
        on left: 26 29 30 31
        on right: 23
    $@4 (44)
        on left: 24
        on right: 26
    $@5 (45)
        on left: 25
        on right: 26
    $@6 (46)
        on left: 27
        on right: 29
    $@7 (47)
        on left: 28
        on right: 29
    relative_layout (48)
        on left: 34
        on right: 2 11
    $@8 (49)
        on left: 32
        on right: 34
    $@9 (50)
        on left: 33
        on right: 34
    relative_attributes (51)
        on left: 35 36
        on right: 34 36
    relative_attribute (52)
        on left: 38
        on right: 35 36
    $@10 (53)
        on left: 37
        on right: 38
    relative_attribute_name (54)
        on left: 41 44 45
        on right: 38
    $@11 (55)
        on left: 39
        on right: 41
    $@12 (56)
        on left: 40
        on right: 41
    $@13 (57)
        on left: 42
        on right: 44
    $@14 (58)
        on left: 43
        on right: 44
    text_view (59)
        on left: 47
        on right: 5
    $@15 (60)
        on left: 46
        on right: 47
    text_attributes (61)
        on left: 48 49
        on right: 47 49
    text_attribute (62)
        on left: 51
        on right: 48 49
    $@16 (63)
        on left: 50
        on right: 51
    text_attribute_name (64)
        on left: 54 57 59 60 61
        on right: 51
    $@17 (65)
        on left: 52
        on right: 54
    $@18 (66)
        on left: 53
        on right: 54
    $@19 (67)
        on left: 55
        on right: 57
    $@20 (68)
        on left: 56
        on right: 57
    $@21 (69)
        on left: 58
        on right: 59
    image_view (70)
        on left: 63
        on right: 6
    $@22 (71)
        on left: 62
        on right: 63
    image_view_attributes (72)
        on left: 64 65
        on right: 63 65
    image_view_attribute (73)
        on left: 67
        on right: 64 65
    $@23 (74)
        on left: 66
        on right: 67
    image_view_attribute_name (75)
        on left: 70 73 75 76 77
        on right: 67
    $@24 (76)
        on left: 68
        on right: 70
    $@25 (77)
        on left: 69
        on right: 70
    $@26 (78)
        on left: 71
        on right: 73
    $@27 (79)
        on left: 72
        on right: 73
    $@28 (80)
        on left: 74
        on right: 75
    button (81)
        on left: 79
        on right: 7
    $@29 (82)
        on left: 78
        on right: 79
    button_attributes (83)
        on left: 80 81
        on right: 79 81
    button_attribute (84)
        on left: 83
        on right: 80 81
    $@30 (85)
        on left: 82
        on right: 83
    button_attribute_name (86)
        on left: 86 89 91 92 93
        on right: 83
    $@31 (87)
        on left: 84
        on right: 86
    $@32 (88)
        on left: 85
        on right: 86
    $@33 (89)
        on left: 87
        on right: 89
    $@34 (90)
        on left: 88
        on right: 89
    $@35 (91)
        on left: 90
        on right: 91
    radio_group (92)
        on left: 96
        on right: 8
    $@36 (93)
        on left: 94
        on right: 96
    $@37 (94)
        on left: 95
        on right: 96
    radio_group_attributes (95)
        on left: 97 98
        on right: 96 98
    radio_group_attribute (96)
        on left: 100
        on right: 97 98
    $@38 (97)
        on left: 99
        on right: 100
    radio_group_attribute_name (98)
        on left: 103 106 107 108 110
        on right: 100
    $@39 (99)
        on left: 101
        on right: 103
    $@40 (100)
        on left: 102
        on right: 103
    $@41 (101)
        on left: 104
        on right: 106
    $@42 (102)
        on left: 105
        on right: 106
    $@43 (103)
        on left: 109
        on right: 110
    radio_button (104)
        on left: 112
        on right: 13 14
    $@44 (105)
        on left: 111
        on right: 112
    radio_button_attributes (106)
        on left: 113 114
        on right: 112 114
    radio_button_attribute (107)
        on left: 116
        on right: 113 114
    $@45 (108)
        on left: 115
        on right: 116
    radio_button_attribute_name (109)
        on left: 119 122 124 125
        on right: 116
    $@46 (110)
        on left: 117
        on right: 119
    $@47 (111)
        on left: 118
        on right: 119
    $@48 (112)
        on left: 120
        on right: 122
    $@49 (113)
        on left: 121
        on right: 122
    $@50 (114)
        on left: 123
        on right: 124
    progress_bar (115)
        on left: 127
        on right: 9
    $@51 (116)
        on left: 126
        on right: 127
    progress_bar_attributes (117)
        on left: 128 129
        on right: 127 129
    progress_bar_attribute (118)
        on left: 131
        on right: 128 129
    $@52 (119)
        on left: 130
        on right: 131
    progress_bar_attribute_name (120)
        on left: 134 137 138 139 140
        on right: 131
    $@53 (121)
        on left: 132
        on right: 134
    $@54 (122)
        on left: 133
        on right: 134
    $@55 (123)
        on left: 135
        on right: 137
    $@56 (124)
        on left: 136
        on right: 137


State 0

    0 $accept: • xml $end

    LESS_THAN  shift, and go to state 1

    xml              go to state 2
    linear_layout    go to state 3
    relative_layout  go to state 4


State 1

   19 linear_layout: LESS_THAN • LINEAR_LAYOUT $@1 linear_attributes GREATER_THAN $@2 child_plus LESS_THAN SLASH LINEAR_LAYOUT GREATER_THAN
   34 relative_layout: LESS_THAN • RELATIVE_LAYOUT $@8 relative_attributes GREATER_THAN $@9 child_plus LESS_THAN SLASH RELATIVE_LAYOUT GREATER_THAN

    LINEAR_LAYOUT    shift, and go to state 5
    RELATIVE_LAYOUT  shift, and go to state 6


State 2

    0 $accept: xml • $end

    $end  shift, and go to state 7


State 3

    1 xml: linear_layout •

    $default  reduce using rule 1 (xml)


State 4

    2 xml: relative_layout •

    $default  reduce using rule 2 (xml)


State 5

   19 linear_layout: LESS_THAN LINEAR_LAYOUT • $@1 linear_attributes GREATER_THAN $@2 child_plus LESS_THAN SLASH LINEAR_LAYOUT GREATER_THAN

    $default  reduce using rule 17 ($@1)

    $@1  go to state 8


State 6

   34 relative_layout: LESS_THAN RELATIVE_LAYOUT • $@8 relative_attributes GREATER_THAN $@9 child_plus LESS_THAN SLASH RELATIVE_LAYOUT GREATER_THAN

    $default  reduce using rule 32 ($@8)

    $@8  go to state 9


State 7

    0 $accept: xml $end •

    $default  accept


State 8

   19 linear_layout: LESS_THAN LINEAR_LAYOUT $@1 • linear_attributes GREATER_THAN $@2 child_plus LESS_THAN SLASH LINEAR_LAYOUT GREATER_THAN

    ANDROID  shift, and go to state 10

    linear_attributes  go to state 11
    linear_attribute   go to state 12


State 9

   34 relative_layout: LESS_THAN RELATIVE_LAYOUT $@8 • relative_attributes GREATER_THAN $@9 child_plus LESS_THAN SLASH RELATIVE_LAYOUT GREATER_THAN

    ANDROID  shift, and go to state 13

    relative_attributes  go to state 14
    relative_attribute   go to state 15


State 10

   23 linear_attribute: ANDROID • COLON $@3 linear_attribute_name

    COLON  shift, and go to state 16


State 11

   19 linear_layout: LESS_THAN LINEAR_LAYOUT $@1 linear_attributes • GREATER_THAN $@2 child_plus LESS_THAN SLASH LINEAR_LAYOUT GREATER_THAN

    GREATER_THAN  shift, and go to state 17


State 12

   20 linear_attributes: linear_attribute •
   21                  | linear_attribute • linear_attributes

    ANDROID  shift, and go to state 10

    $default  reduce using rule 20 (linear_attributes)

    linear_attributes  go to state 18
    linear_attribute   go to state 12


State 13

   38 relative_attribute: ANDROID • COLON $@10 relative_attribute_name

    COLON  shift, and go to state 19


State 14

   34 relative_layout: LESS_THAN RELATIVE_LAYOUT $@8 relative_attributes • GREATER_THAN $@9 child_plus LESS_THAN SLASH RELATIVE_LAYOUT GREATER_THAN

    GREATER_THAN  shift, and go to state 20


State 15

   35 relative_attributes: relative_attribute •
   36                    | relative_attribute • relative_attributes

    ANDROID  shift, and go to state 13

    $default  reduce using rule 35 (relative_attributes)

    relative_attributes  go to state 21
    relative_attribute   go to state 15


State 16

   23 linear_attribute: ANDROID COLON • $@3 linear_attribute_name

    $default  reduce using rule 22 ($@3)

    $@3  go to state 22


State 17

   19 linear_layout: LESS_THAN LINEAR_LAYOUT $@1 linear_attributes GREATER_THAN • $@2 child_plus LESS_THAN SLASH LINEAR_LAYOUT GREATER_THAN

    $default  reduce using rule 18 ($@2)

    $@2  go to state 23


State 18

   21 linear_attributes: linear_attribute linear_attributes •

    $default  reduce using rule 21 (linear_attributes)


State 19

   38 relative_attribute: ANDROID COLON • $@10 relative_attribute_name

    $default  reduce using rule 37 ($@10)

    $@10  go to state 24


State 20

   34 relative_layout: LESS_THAN RELATIVE_LAYOUT $@8 relative_attributes GREATER_THAN • $@9 child_plus LESS_THAN SLASH RELATIVE_LAYOUT GREATER_THAN

    $default  reduce using rule 33 ($@9)

    $@9  go to state 25


State 21

   36 relative_attributes: relative_attribute relative_attributes •

    $default  reduce using rule 36 (relative_attributes)


State 22

   23 linear_attribute: ANDROID COLON $@3 • linear_attribute_name

    LAYOUT_WIDTH   shift, and go to state 26
    LAYOUT_HEIGHT  shift, and go to state 27
    ORIENTATION    shift, and go to state 28
    ID             shift, and go to state 29

    linear_attribute_name  go to state 30


State 23

   19 linear_layout: LESS_THAN LINEAR_LAYOUT $@1 linear_attributes GREATER_THAN $@2 • child_plus LESS_THAN SLASH LINEAR_LAYOUT GREATER_THAN

    LESS_THAN  shift, and go to state 31
    STRING     shift, and go to state 32

    child_plus       go to state 33
    child            go to state 34
    linear_layout    go to state 35
    relative_layout  go to state 36
    text_view        go to state 37
    image_view       go to state 38
    button           go to state 39
    radio_group      go to state 40
    progress_bar     go to state 41


State 24

   38 relative_attribute: ANDROID COLON $@10 • relative_attribute_name

    LAYOUT_WIDTH   shift, and go to state 42
    LAYOUT_HEIGHT  shift, and go to state 43
    ID             shift, and go to state 44

    relative_attribute_name  go to state 45


State 25

   34 relative_layout: LESS_THAN RELATIVE_LAYOUT $@8 relative_attributes GREATER_THAN $@9 • child_plus LESS_THAN SLASH RELATIVE_LAYOUT GREATER_THAN

    LESS_THAN  shift, and go to state 31
    STRING     shift, and go to state 32

    child_plus       go to state 46
    child            go to state 34
    linear_layout    go to state 35
    relative_layout  go to state 36
    text_view        go to state 37
    image_view       go to state 38
    button           go to state 39
    radio_group      go to state 40
    progress_bar     go to state 41


State 26

   26 linear_attribute_name: LAYOUT_WIDTH • $@4 ASSIGN $@5 str_or_int

    $default  reduce using rule 24 ($@4)

    $@4  go to state 47


State 27

   29 linear_attribute_name: LAYOUT_HEIGHT • $@6 ASSIGN $@7 str_or_int

    $default  reduce using rule 27 ($@6)

    $@6  go to state 48


State 28

   30 linear_attribute_name: ORIENTATION • ASSIGN STRING

    ASSIGN  shift, and go to state 49


State 29

   31 linear_attribute_name: ID • ASSIGN STRING

    ASSIGN  shift, and go to state 50


State 30

   23 linear_attribute: ANDROID COLON $@3 linear_attribute_name •

    $default  reduce using rule 23 (linear_attribute)


State 31

   19 linear_layout: LESS_THAN • LINEAR_LAYOUT $@1 linear_attributes GREATER_THAN $@2 child_plus LESS_THAN SLASH LINEAR_LAYOUT GREATER_THAN
   34 relative_layout: LESS_THAN • RELATIVE_LAYOUT $@8 relative_attributes GREATER_THAN $@9 child_plus LESS_THAN SLASH RELATIVE_LAYOUT GREATER_THAN
   47 text_view: LESS_THAN • TEXT_VIEW $@15 text_attributes SLASH GREATER_THAN
   63 image_view: LESS_THAN • IMAGE_VIEW $@22 image_view_attributes SLASH GREATER_THAN
   79 button: LESS_THAN • BUTTON $@29 button_attributes SLASH GREATER_THAN
   96 radio_group: LESS_THAN • RADIO_GROUP $@36 radio_group_attributes GREATER_THAN $@37 radio_button_plus LESS_THAN SLASH RADIO_GROUP GREATER_THAN
  127 progress_bar: LESS_THAN • PROGRESS_BAR $@51 progress_bar_attributes SLASH GREATER_THAN

    LINEAR_LAYOUT    shift, and go to state 5
    RELATIVE_LAYOUT  shift, and go to state 6
    TEXT_VIEW        shift, and go to state 51
    IMAGE_VIEW       shift, and go to state 52
    BUTTON           shift, and go to state 53
    RADIO_GROUP      shift, and go to state 54
    PROGRESS_BAR     shift, and go to state 55


State 32

   12 child: STRING •

    $default  reduce using rule 12 (child)


State 33

    4 child_plus: child_plus • child
   19 linear_layout: LESS_THAN LINEAR_LAYOUT $@1 linear_attributes GREATER_THAN $@2 child_plus • LESS_THAN SLASH LINEAR_LAYOUT GREATER_THAN

    LESS_THAN  shift, and go to state 56
    STRING     shift, and go to state 32

    child            go to state 57
    linear_layout    go to state 35
    relative_layout  go to state 36
    text_view        go to state 37
    image_view       go to state 38
    button           go to state 39
    radio_group      go to state 40
    progress_bar     go to state 41


State 34

    3 child_plus: child •

    $default  reduce using rule 3 (child_plus)


State 35

   10 child: linear_layout •

    $default  reduce using rule 10 (child)


State 36

   11 child: relative_layout •

    $default  reduce using rule 11 (child)


State 37

    5 child: text_view •

    $default  reduce using rule 5 (child)


State 38

    6 child: image_view •

    $default  reduce using rule 6 (child)


State 39

    7 child: button •

    $default  reduce using rule 7 (child)


State 40

    8 child: radio_group •

    $default  reduce using rule 8 (child)


State 41

    9 child: progress_bar •

    $default  reduce using rule 9 (child)


State 42

   41 relative_attribute_name: LAYOUT_WIDTH • $@11 ASSIGN $@12 str_or_int

    $default  reduce using rule 39 ($@11)

    $@11  go to state 58


State 43

   44 relative_attribute_name: LAYOUT_HEIGHT • $@13 ASSIGN $@14 str_or_int

    $default  reduce using rule 42 ($@13)

    $@13  go to state 59


State 44

   45 relative_attribute_name: ID • ASSIGN STRING

    ASSIGN  shift, and go to state 60


State 45

   38 relative_attribute: ANDROID COLON $@10 relative_attribute_name •

    $default  reduce using rule 38 (relative_attribute)


State 46

    4 child_plus: child_plus • child
   34 relative_layout: LESS_THAN RELATIVE_LAYOUT $@8 relative_attributes GREATER_THAN $@9 child_plus • LESS_THAN SLASH RELATIVE_LAYOUT GREATER_THAN

    LESS_THAN  shift, and go to state 61
    STRING     shift, and go to state 32

    child            go to state 57
    linear_layout    go to state 35
    relative_layout  go to state 36
    text_view        go to state 37
    image_view       go to state 38
    button           go to state 39
    radio_group      go to state 40
    progress_bar     go to state 41


State 47

   26 linear_attribute_name: LAYOUT_WIDTH $@4 • ASSIGN $@5 str_or_int

    ASSIGN  shift, and go to state 62


State 48

   29 linear_attribute_name: LAYOUT_HEIGHT $@6 • ASSIGN $@7 str_or_int

    ASSIGN  shift, and go to state 63


State 49

   30 linear_attribute_name: ORIENTATION ASSIGN • STRING

    STRING  shift, and go to state 64


State 50

   31 linear_attribute_name: ID ASSIGN • STRING

    STRING  shift, and go to state 65


State 51

   47 text_view: LESS_THAN TEXT_VIEW • $@15 text_attributes SLASH GREATER_THAN

    $default  reduce using rule 46 ($@15)

    $@15  go to state 66


State 52

   63 image_view: LESS_THAN IMAGE_VIEW • $@22 image_view_attributes SLASH GREATER_THAN

    $default  reduce using rule 62 ($@22)

    $@22  go to state 67


State 53

   79 button: LESS_THAN BUTTON • $@29 button_attributes SLASH GREATER_THAN

    $default  reduce using rule 78 ($@29)

    $@29  go to state 68


State 54

   96 radio_group: LESS_THAN RADIO_GROUP • $@36 radio_group_attributes GREATER_THAN $@37 radio_button_plus LESS_THAN SLASH RADIO_GROUP GREATER_THAN

    $default  reduce using rule 94 ($@36)

    $@36  go to state 69


State 55

  127 progress_bar: LESS_THAN PROGRESS_BAR • $@51 progress_bar_attributes SLASH GREATER_THAN

    $default  reduce using rule 126 ($@51)

    $@51  go to state 70


State 56

   19 linear_layout: LESS_THAN • LINEAR_LAYOUT $@1 linear_attributes GREATER_THAN $@2 child_plus LESS_THAN SLASH LINEAR_LAYOUT GREATER_THAN
   19              | LESS_THAN LINEAR_LAYOUT $@1 linear_attributes GREATER_THAN $@2 child_plus LESS_THAN • SLASH LINEAR_LAYOUT GREATER_THAN
   34 relative_layout: LESS_THAN • RELATIVE_LAYOUT $@8 relative_attributes GREATER_THAN $@9 child_plus LESS_THAN SLASH RELATIVE_LAYOUT GREATER_THAN
   47 text_view: LESS_THAN • TEXT_VIEW $@15 text_attributes SLASH GREATER_THAN
   63 image_view: LESS_THAN • IMAGE_VIEW $@22 image_view_attributes SLASH GREATER_THAN
   79 button: LESS_THAN • BUTTON $@29 button_attributes SLASH GREATER_THAN
   96 radio_group: LESS_THAN • RADIO_GROUP $@36 radio_group_attributes GREATER_THAN $@37 radio_button_plus LESS_THAN SLASH RADIO_GROUP GREATER_THAN
  127 progress_bar: LESS_THAN • PROGRESS_BAR $@51 progress_bar_attributes SLASH GREATER_THAN

    SLASH            shift, and go to state 71
    LINEAR_LAYOUT    shift, and go to state 5
    RELATIVE_LAYOUT  shift, and go to state 6
    TEXT_VIEW        shift, and go to state 51
    IMAGE_VIEW       shift, and go to state 52
    BUTTON           shift, and go to state 53
    RADIO_GROUP      shift, and go to state 54
    PROGRESS_BAR     shift, and go to state 55


State 57

    4 child_plus: child_plus child •

    $default  reduce using rule 4 (child_plus)


State 58

   41 relative_attribute_name: LAYOUT_WIDTH $@11 • ASSIGN $@12 str_or_int

    ASSIGN  shift, and go to state 72


State 59

   44 relative_attribute_name: LAYOUT_HEIGHT $@13 • ASSIGN $@14 str_or_int

    ASSIGN  shift, and go to state 73


State 60

   45 relative_attribute_name: ID ASSIGN • STRING

    STRING  shift, and go to state 74


State 61

   19 linear_layout: LESS_THAN • LINEAR_LAYOUT $@1 linear_attributes GREATER_THAN $@2 child_plus LESS_THAN SLASH LINEAR_LAYOUT GREATER_THAN
   34 relative_layout: LESS_THAN • RELATIVE_LAYOUT $@8 relative_attributes GREATER_THAN $@9 child_plus LESS_THAN SLASH RELATIVE_LAYOUT GREATER_THAN
   34                | LESS_THAN RELATIVE_LAYOUT $@8 relative_attributes GREATER_THAN $@9 child_plus LESS_THAN • SLASH RELATIVE_LAYOUT GREATER_THAN
   47 text_view: LESS_THAN • TEXT_VIEW $@15 text_attributes SLASH GREATER_THAN
   63 image_view: LESS_THAN • IMAGE_VIEW $@22 image_view_attributes SLASH GREATER_THAN
   79 button: LESS_THAN • BUTTON $@29 button_attributes SLASH GREATER_THAN
   96 radio_group: LESS_THAN • RADIO_GROUP $@36 radio_group_attributes GREATER_THAN $@37 radio_button_plus LESS_THAN SLASH RADIO_GROUP GREATER_THAN
  127 progress_bar: LESS_THAN • PROGRESS_BAR $@51 progress_bar_attributes SLASH GREATER_THAN

    SLASH            shift, and go to state 75
    LINEAR_LAYOUT    shift, and go to state 5
    RELATIVE_LAYOUT  shift, and go to state 6
    TEXT_VIEW        shift, and go to state 51
    IMAGE_VIEW       shift, and go to state 52
    BUTTON           shift, and go to state 53
    RADIO_GROUP      shift, and go to state 54
    PROGRESS_BAR     shift, and go to state 55


State 62

   26 linear_attribute_name: LAYOUT_WIDTH $@4 ASSIGN • $@5 str_or_int

    $default  reduce using rule 25 ($@5)

    $@5  go to state 76


State 63

   29 linear_attribute_name: LAYOUT_HEIGHT $@6 ASSIGN • $@7 str_or_int

    $default  reduce using rule 28 ($@7)

    $@7  go to state 77


State 64

   30 linear_attribute_name: ORIENTATION ASSIGN STRING •

    $default  reduce using rule 30 (linear_attribute_name)


State 65

   31 linear_attribute_name: ID ASSIGN STRING •

    $default  reduce using rule 31 (linear_attribute_name)


State 66

   47 text_view: LESS_THAN TEXT_VIEW $@15 • text_attributes SLASH GREATER_THAN

    ANDROID  shift, and go to state 78

    text_attributes  go to state 79
    text_attribute   go to state 80


State 67

   63 image_view: LESS_THAN IMAGE_VIEW $@22 • image_view_attributes SLASH GREATER_THAN

    ANDROID  shift, and go to state 81

    image_view_attributes  go to state 82
    image_view_attribute   go to state 83


State 68

   79 button: LESS_THAN BUTTON $@29 • button_attributes SLASH GREATER_THAN

    ANDROID  shift, and go to state 84

    button_attributes  go to state 85
    button_attribute   go to state 86


State 69

   96 radio_group: LESS_THAN RADIO_GROUP $@36 • radio_group_attributes GREATER_THAN $@37 radio_button_plus LESS_THAN SLASH RADIO_GROUP GREATER_THAN

    ANDROID  shift, and go to state 87

    radio_group_attributes  go to state 88
    radio_group_attribute   go to state 89


State 70

  127 progress_bar: LESS_THAN PROGRESS_BAR $@51 • progress_bar_attributes SLASH GREATER_THAN

    ANDROID  shift, and go to state 90

    progress_bar_attributes  go to state 91
    progress_bar_attribute   go to state 92


State 71

   19 linear_layout: LESS_THAN LINEAR_LAYOUT $@1 linear_attributes GREATER_THAN $@2 child_plus LESS_THAN SLASH • LINEAR_LAYOUT GREATER_THAN

    LINEAR_LAYOUT  shift, and go to state 93


State 72

   41 relative_attribute_name: LAYOUT_WIDTH $@11 ASSIGN • $@12 str_or_int

    $default  reduce using rule 40 ($@12)

    $@12  go to state 94


State 73

   44 relative_attribute_name: LAYOUT_HEIGHT $@13 ASSIGN • $@14 str_or_int

    $default  reduce using rule 43 ($@14)

    $@14  go to state 95


State 74

   45 relative_attribute_name: ID ASSIGN STRING •

    $default  reduce using rule 45 (relative_attribute_name)


State 75

   34 relative_layout: LESS_THAN RELATIVE_LAYOUT $@8 relative_attributes GREATER_THAN $@9 child_plus LESS_THAN SLASH • RELATIVE_LAYOUT GREATER_THAN

    RELATIVE_LAYOUT  shift, and go to state 96


State 76

   26 linear_attribute_name: LAYOUT_WIDTH $@4 ASSIGN $@5 • str_or_int

    INT     shift, and go to state 97
    STRING  shift, and go to state 98

    str_or_int  go to state 99


State 77

   29 linear_attribute_name: LAYOUT_HEIGHT $@6 ASSIGN $@7 • str_or_int

    INT     shift, and go to state 97
    STRING  shift, and go to state 98

    str_or_int  go to state 100


State 78

   51 text_attribute: ANDROID • COLON $@16 text_attribute_name

    COLON  shift, and go to state 101


State 79

   47 text_view: LESS_THAN TEXT_VIEW $@15 text_attributes • SLASH GREATER_THAN

    SLASH  shift, and go to state 102


State 80

   48 text_attributes: text_attribute •
   49                | text_attribute • text_attributes

    ANDROID  shift, and go to state 78

    $default  reduce using rule 48 (text_attributes)

    text_attributes  go to state 103
    text_attribute   go to state 80


State 81

   67 image_view_attribute: ANDROID • COLON $@23 image_view_attribute_name

    COLON  shift, and go to state 104


State 82

   63 image_view: LESS_THAN IMAGE_VIEW $@22 image_view_attributes • SLASH GREATER_THAN

    SLASH  shift, and go to state 105


State 83

   64 image_view_attributes: image_view_attribute •
   65                      | image_view_attribute • image_view_attributes

    ANDROID  shift, and go to state 81
